css/default.css
@font-face {
    font-family: 'LibertinusMath';
    font-weight: normal;
    font-style: normal;
    src: url('/fonts/LibertinusMath-Regular.woff2') format('woff2');
}
@font-face {
    font-family: 'LibertinusSerif';
    font-weight: normal;
    font-style: normal;
    src: url('/fonts/LibertinusSerif-Regular.woff2') format('woff2');
}
@font-face {
    font-family: 'LibertinusSerif';
    font-weight: bold;
    font-style: normal;
    src: url('/fonts/LibertinusSerif-Bold.woff2') format('woff2');
}
@font-face {
    font-family: 'LibertinusSerif';
    font-weight: normal;
    font-style: italic;
    src: url('/fonts/LibertinusSerif-Italic.woff2') format('woff2');
}
@font-face {
    font-family: 'LibertinusSerif';
    font-weight: bold;
    font-style: italic;
    src: url('/fonts/LibertinusSerif-BoldItalic.woff2') format('woff2');
}
@font-face {
    font-family: 'LinBiolinum'; /* normal */
    src: url('/fonts/LinBiolinum_R.woff2') format('woff2');
    font-weight: normal;
    font-style: normal;
}
@font-face {
    font-family: 'LinBiolinum'; /* italic */
    src: url('/fonts/LinBiolinum_RI.woff2') format('woff2');
    font-weight: normal;
    font-style: italic;
}
@font-face {
    font-family: 'LinBiolinum'; /* bold */
    src: url('/fonts/LinBiolinum_RB.woff2') format('woff2');
    font-weight: bold;
    font-style: normal;
}
@font-face {
    font-family: 'neozhisong';
    font-weight: normal;
    font-style: normal;
    src: url('/fonts/LXGWNeoZhiSongScreen.woff2') format('woff2');
}

body {
    font-family: 'LibertinusSerif', serif;
    font-size: 1.2em;
    line-height: 125%;
    color: black;
    background-color: white;
}
body a {
    color: #337ab7;
    text-decoration: none;
}
body a:hover {
    text-decoration: underline;
    text-decoration-style: solid;
}
body a:visited {
    color: #7e50a9; /* Color for visited links */
}
body .langtag {
    color: gray;
}
body a[title] {
    color: darkolivegreen;
}


header {
    font-weight: bold;
}

/* Navbar styling  only for top bar!!!*/
.navbar {
    display: flex; /* Uses flexbox for layout */
    justify-content: space-between; /* Distributes space between elements */
    align-items: center; /* Vertically centers the items */
}

.navright a {
    margin: 0 0 0 1em;
}

/* Links inside the navbar */
.navbar a {
    text-decoration: none;
}
.navbar a:visited { 
    color: #555555;
}

nav {
    text-align: right;
    border-bottom: solid 1px black;
}

nav a {
    font-family: "LinBiolinum", sans-serif;
    font-size: 1.4rem;
    color: #555555;
    margin-left: 12px;
    text-decoration: none
}

.uri {
    word-wrap: break-word; /* Legacy support */
    overflow-wrap: break-word; /* Modern property */
    word-break: break-all; /* Break long words if necessary */
    white-space: normal; /* Allow wrapping */
  }



footer {
    color: #555;
    font-size: 12px;
    margin-top: 30px;
    padding: 6px 0px 6px 0px;
    text-align: right
}
.pagetitle{
    /* margin-top: 2em; */
    font-size: 1.728em;
    font-weight: normal;
    font-style: normal;
    text-align: left;
    line-height: 100%;
}
h1 {
    margin-top: 1em;
    font-size: 1.44em;
    font-weight: bold;
    font-style: normal;
    text-align: left;
    line-height: 100%;
}

h2 {
    margin-top: 1em;
    font-size: 1.2em;
    font-weight: bold;
    font-style: normal
}

h3 {
    margin-top: 1em;
    font-size: 1em;
    font-weight: bold;
    font-style: normal
}

article .header {
    font-size: 1rem;
    font-style: normal;
    color: #555;
    text-align: left;
}

.logo a {
    font-weight: bold;
    color: #233;
    text-decoration: none;
}

.info {
    color: darkgreen;
    font-size: 1.1rem;
    font-style: normal;
    text-align: left;
    padding-bottom: 1em;
}
.info a{
    color: darkolivegreen;
    font-size: 1.1rem;
    font-style: normal;
    text-align: left;
}
.info a:visited{
    color: darkolivegreen;
}
.ascii-art {
    border: 2px solid black; /* Adds a solid border */
    padding: 10px;           /* Adds space between the border and the content */
    background-color: #f0f0f0; /* Optional: background color to make it stand out */
    display: inline-block;   /* Keeps the border close to the content */
    font-family: monospace;  /* Ensures consistent ASCII art font */
    line-height: normal;
}

blockquote {
    margin: 0em 0px;
    padding: 0em 1em;
    border-left: 3px solid olivedrab;
}

blockquote p {
    margin: 0; /* Removes default paragraph margin inside blockquote */
}


table {
    background-color: rgb(245, 245, 245);
}

figure {
    /* border: thin #c0c0c0 solid; */
    display: flex;
    flex-flow: column;
    padding: 5px;
    margin: auto;
    /* width: 60%; */
    max-width: 80%;
}

  
figcaption {
/* font: italic smaller sans-serif; */
padding: 3px;
text-align: center;
}
  
.caption {
    display: none
}

.centerimg img {
    margin: 0 auto 0 auto;
    display: block;
}
.katex .mathnormal, .katex .mathrm, .katex .custom-Regular, .katex .amsrm {
	font-family: 'LibertinusMath';
}

.katex, .katex * {
    line-height: normal !important;
    font-size: 1em;
}

div.highlight,
pre code {
    margin: 0 auto;
    padding: 10px;
    background: #eee;
    overflow: scroll;
    display: block;
}

code {
    margin: 0 auto;
    background: #eee;
    display: inline-block;
    padding: 0px 2px;
    border-radius: 2px;
}

.code-output {
    margin: 0 auto;
    padding: 10px;
}

.code-output code {
    background-color: inherit;
}

.highlight pre {
    margin: 0
}

.main-text {
    margin-top: 2em
}

.sidenote {
    position: absolute;
    margin-left: 830px;
    font-size: 1em;
    color: #333
}

.sidenote ol {
    margin: 0
}

.sidenote p {
    margin: 5px 0 5px 0;
    padding-right: 20px
}

.footnotes {
    font-size: 1em;
    color: #333;
    display: none
}

ul.posts {
    list-style: none;
    padding-left: 0
}

.draft-notice {
    color: #fb4f4f;
    margin: 1em auto;
    text-align: center
}

.left {
    float: left
}

.collection-seek h5 {
    text-align: center;
    height: 0;
    margin: 0;
    font-size: 0.9em
}

.collection-seek {
    text-align: right;
    height: 1em;
    font-size: 0.9em
}

.subtitle {
    text-align: left;
    font-size: 1.2em;
    margin-top: 0
}

@media (max-width: 640px) {
    body {
        width: 90%;
        margin: 0;
        padding: 0 5%;
        font-size: 1em;
    }
    nav a {
        font-size: 1.4em;
    }
    .navright{
        overflow: scroll;
        white-space: nowrap;
    }

    header {
        margin: 1rem 0;
    }
    footer {
        font-size: 10px;
    }

}

@media (min-width: 640px) {
    body {
        width: auto;
        /* margin: 0 25% 0 25%; */
        margin: 0 20% 0 20%;
        padding: 0;
    }

    /* header {
        margin: 0 0 3rem;
        padding: 0.5em 0 0 0;
    } */

    nav {
        margin: 0;
        text-align: right;
    }

    nav a {
        margin: 0;
        display: inline;
    }

    footer {
        text-align: right;
        padding: 3pt 10pt 0 0;
    }

    .logo {
        margin: 0;
        text-align: left;
    }

    .logo a {
        float: left;
        font-size: 1.8rem;
    }
}
@media print
{    
    .no-print, .no-print *
    {
        display: none !important;
    }
    body{
        font-size: 90%;
        margin: auto;
        /* width: 90%; */
    }
}

